--- a/a.css
+++ b/a.css
@@ -1,35 +1,7 @@
 @font-face {
   font-family: "oneabb-font-abbvoice";
-  src: url(./fonts/ABBvoice_W_Lt.eot);
-  /* IE9 */
-  src: url(./fonts/ABBvoice_W_Lt.eot?#iefix) format("embedded-opentype"), url(./fonts/ABBvoice_W_Lt.woff2) format("woff2"), url(./fonts/ABBvoice_W_Lt.woff) format("woff");
-  /* chrome, firefox */
-  font-style: normal;
-  font-weight: 200; }
-
-@font-face {
-  font-family: "oneabb-font-abbvoice";
   src: url(./fonts/ABBvoice_W_Rg.eot);
-  /* IE9 */
   src: url(./fonts/ABBvoice_W_Rg.eot?#iefix) format("embedded-opentype"), url(./fonts/ABBvoice_W_Rg.woff2) format("woff2"), url(./fonts/ABBvoice_W_Rg.woff) format("woff");
-  /* chrome, firefox */
   font-style: normal;
-  font-weight: 400; }
-
-@font-face {
-  font-family: "oneabb-font-abbvoice";
-  src: url(./fonts/ABBvoice_W_Md.eot);
-  /* IE9 */
-  src: url(./fonts/ABBvoice_W_Md.eot?#iefix) format("embedded-opentype"), url(./fonts/ABBvoice_W_Md.woff2) format("woff2"), url(./fonts/ABBvoice_W_Md.woff) format("woff");
-  /* chrome, firefox */
-  font-style: normal;
-  font-weight: 600; }
-
-@font-face {
-  font-family: "oneabb-font-abbvoice";
-  src: url(./fonts/ABBvoice_W_Bd.eot);
-  /* IE9 */
-  src: url(./fonts/ABBvoice_W_Bd.eot?#iefix) format("embedded-opentype"), url(./fonts/ABBvoice_W_Bd.woff2) format("woff2"), url(./fonts/ABBvoice_W_Bd.woff) format("woff");
-  /* chrome, firefox */
-  font-style: normal;
-  font-weight: 700; }
+  font-weight: 400; 
+}
